# AIProject

./: .env  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 134f3d0a34e9_create_initial_tables_for_users_books_.py  1b820f65bbcb_create_history_table.py
app/: database.py  main.py  models.py  schemas.py
app/api/v1/: dependencies.py
app/api/v1/endpoints/: books.py  llm.py  users.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/db/crud/: book_crud.py  comment_crud.py  user_crud.py
app/db/models/: book.py  comment.py  history.py  user.py
app/routers/: users.py
app/schemas/: book.py  comment.py  llm.py  user.py
app/services/: gemini_service.py  llm_service.py
llm_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py
tests/api/: test_llm.py  test_main.py
